# OpenRenderer

./: CMakeLists.txt  README.md  TODO.md
Core/: CMakeLists.txt
Core/src/Rendering/: Renderer.cpp  Scene.h  Serializer.cpp
Core/src/System/: Window.h
Editor/: CMakeLists.txt
Editor/src/: Application.cpp
Editor/src/UI/: Panel.cpp  UI.cpp
cmake/: Dependencies.cmake
config/: imgui.ini
